scene: use fractionalGeometry() as input of RenderViewport renderRect

Fixes mismatches between renderTarget.size() and deivce geometry calculated using viewport.renderRect() * viewport.scale() .

BUG: 475325